feat: update styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang=es>
   <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width, initial-scale=1">
@@ -11,24 +11,26 @@
      body {
         background: #fff;
         color: #000;
-        font: 16px monospace;
-        margin: 1rem 1rem 8rem;
+        font: 20px monospace;
+        margin: 1rem;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
      }
+
      @media (prefers-color-scheme: dark) {
        body {
          background: #111;
          color: #fff;
        }
      }
+
      .wrapper {
        margin: auto;
        max-width: 25rem;
      }
 
      h1 {
-       font-size: 2rem;
+       font-size: 1.5em;
        font-weight: inherit;
        text-align: center;
      }
@@ -41,6 +43,8 @@
      li {
        background: currentColor;
        transition: transform .1s;
+       border-radius: 2px;
+       text-align: center;
      }
 
      li:hover {
@@ -57,26 +61,23 @@
        padding: 1rem;
        text-decoration: none;
      }
-     .tw {
-       color: #1da1f2
-     }
 
-     .ig {
-       color: #c13584
-     }
+     .tw { color: #1da1f2 }
+
+     .ig { color: #c13584 }
     </style>
   </head>
   <body>
     <div class=wrapper>
       <h1>Mario Nachbaur</h1>
       <ul>
-        <li class="tw">
-          <a href="https://twitter.com/marionauta" rel="me noopener noreferrer">
+        <li class=tw>
+          <a href=https://twitter.com/marionauta rel="me noopener noreferrer">
             twitter
           </a>
         </li>
-        <li class="ig">
-          <a href="https://instagram.com/marionauta" rel="me noopener noreferrer">
+        <li class=ig>
+          <a href=https://instagram.com/marionauta rel="me noopener noreferrer">
             instagram
           </a>
         </li>
