feat: add bluesky link

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
      }
 
      .tw { color: #1da1f2 }
-
      .ig { color: #c13584 }
+     .bs { color: #5a71fa }
     </style>
   </head>
   <body>
@@ -79,6 +79,11 @@
         <li class=ig>
           <a href=https://instagram.com/marionauta rel="me noopener noreferrer">
             instagram
+          </a>
+        </li>
+        <li class=bs>
+          <a href=https://bsky.app/profile/marionauta.bsky.social rel="me noopener noreferrer">
+            bluesky
           </a>
         </li>
       </ul>
