feat: add favicons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel=icon href=data:,>
     <title>Mario</title>
     <link rel=canonical href=https://marionauta.com>
+    <link rel=icon href=/favicon.ico sizes=any>
+    <link rel=icon href=/icon.svg type="image/svg+xml">
     <style>
      body {
         background: #fff;
