feat: add header margin & reformat styles

--- a/index.html
+++ b/index.html
@@ -10,68 +10,74 @@
     <link rel=icon href=/favicon.ico sizes=any>
     <link rel=icon href=/icon.svg type="image/svg+xml">
     <style>
-     body {
+    body {
         background: #fff;
         color: #000;
         font: 20px monospace;
         margin: 1rem;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-     }
+    }
 
-     @media (prefers-color-scheme: dark) {
-       body {
-         background: #111;
-         color: #fff;
-       }
-     }
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: #111;
+        color: #fff;
+      }
+    }
 
-     .wrapper {
-       margin: auto;
-       max-width: 25rem;
-     }
+    .wrapper {
+      margin: auto;
+      max-width: 25rem;
+    }
 
-     h1 {
-       font-size: 1.5em;
-       font-weight: inherit;
-       text-align: center;
-     }
+    header {
+      margin: 4em 0;
+    }
 
-     ul {
-       list-style: none;
-       padding: 0;
-     }
+    h1 {
+      font-size: 1.5em;
+      font-weight: inherit;
+      text-align: center;
+    }
 
-     li {
-       background: currentColor;
-       transition: transform .1s;
-       border-radius: 2px;
-       text-align: center;
-     }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
 
-     li:hover {
-       transform: scale(1.05);
-     }
+    li {
+      background: currentColor;
+      transition: transform .1s;
+      border-radius: 2px;
+      text-align: center;
+    }
 
-     li+li {
-       margin-top: 1rem;
-     }
+    li:hover {
+      transform: scale(1.05);
+    }
 
-     li a {
-       color: white;
-       display: block;
-       padding: 1rem;
-       text-decoration: none;
-     }
+    li+li {
+      margin-top: 1rem;
+    }
 
-     .tw { color: #1da1f2 }
-     .ig { color: #c13584 }
-     .bs { color: #5a71fa }
+    li a {
+      color: white;
+      display: block;
+      padding: 1rem;
+      text-decoration: none;
+    }
+
+    .tw { color: #1da1f2 }
+    .ig { color: #c13584 }
+    .bs { color: #5a71fa }
     </style>
   </head>
   <body>
     <div class=wrapper>
-      <h1>Mario Nachbaur</h1>
+      <header>
+        <h1>Mario Nachbaur</h1>
+      </header>
       <ul>
         <li class=tw>
           <a href=https://twitter.com/marionauta rel="me noopener noreferrer">
