feat: add threads link

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     .tw { color: #1da1f2 }
     .ig { color: #c13584 }
+    .th { color: #333 }
     .bs { color: #5a71fa }
     </style>
   </head>
@@ -87,6 +88,11 @@
         <li class=ig>
           <a href=https://instagram.com/marionauta rel="me noopener noreferrer">
             instagram
+          </a>
+        </li>
+        <li class=th>
+          <a href=https://threads.net/marionauta rel="me noopener noreferrer">
+            threads
           </a>
         </li>
         <li class=bs>
