feat: update links

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       text-decoration: none;
     }
 
-    .tw { color: #1da1f2 }
     .ig { color: #c13584 }
     .th { color: #333 }
     .bs { color: #5a71fa }
+    .dv { color: #fa0 }
     </style>
   </head>
   <body>
@@ -80,9 +80,9 @@
         <h1>Mario Nachbaur</h1>
       </header>
       <ul>
-        <li class=tw>
-          <a href=https://twitter.com/marionauta rel="me noopener noreferrer">
-            twitter
+        <li class=bs>
+          <a href=https://bsky.app/profile/marionauta.bsky.social rel="me noopener noreferrer">
+            bluesky
           </a>
         </li>
         <li class=ig>
@@ -95,9 +95,9 @@
             threads
           </a>
         </li>
-        <li class=bs>
-          <a href=https://bsky.app/profile/marionauta.bsky.social rel="me noopener noreferrer">
-            bluesky
+        <li class=dv>
+          <a href=https://mario.nachbaur.dev/social rel="me noopener noreferrer">
+            my dev accounts
           </a>
         </li>
       </ul>
