feat: update bsky link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </header>
       <ul>
         <li class=bs>
-          <a href=https://bsky.app/profile/marionauta.bsky.social rel="me noopener noreferrer">
+          <a href=https://bsky.app/profile/marionauta.com rel="me noopener noreferrer">
             bluesky
           </a>
         </li>
