feat: add mastodon

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     .ig { color: #c13584 }
     .th { color: #333 }
+    .md { color: #6364ff }
     .bs { color: #5a71fa }
     .dv { color: #fa0 }
     </style>
@@ -88,6 +89,11 @@
         <li class=ig>
           <a href=https://instagram.com/marionauta rel="me noopener noreferrer">
             instagram
+          </a>
+        </li>
+        <li class=md>
+          <a href=https://mastodon.social/@marionauta rel="me noopener noreferrer">
+            mastodon
           </a>
         </li>
         <li class=th>
